--- a/public/style.css
+++ b/public/style.css
@@ -268,6 +268,8 @@ span{
     flex:1 1 40rem;
 }
 
+
+
 .about .row .content h3{
     font-size: 2rem;
     color: var(--white);
@@ -279,6 +281,8 @@ span{
       font-size: 1.2rem;
       color: var(--light-white);
 }
+
+
 
 .courses{
    background-color: #f8f9ff;
@@ -472,7 +476,7 @@ span{
 .footer .share{
     
     border-radius: 20px;
-    
+    box-shadow: 10px 10px 40px 2px #19A7CE;
     background-color: white;
 }
 
