Added controllers to the sign-up and sign-in pages

--- a/public/sign-in.css
+++ b/public/sign-in.css
@@ -50,6 +50,7 @@ html{
 
 body{
     background-color: var(--black);
+    margin-top: 4rem;
 }
 
 section{
@@ -64,7 +65,7 @@ section{
 }
 
 .container{
-    height: 80vh;
+    height: 60vh;
     width: 100%;
 
     background-color: #f8f9ff;
