--- a/views/user-sign-in.ejs
+++ b/views/user-sign-in.ejs
@@ -1,30 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 
-    <link
-    rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-    />
-
-     <!-- fond awesome cdn link-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
     <link rel="stylesheet" href="/static/sign-in.css">
-
-
-</head>
-<body>
-    
     <div class="contains">
         <div class="container">
            <div class="form-box">
             <h1>Sign In</h1>
-            <form action="/create" method="POST">
+            <form action="/users/create-session" method="POST">
                 <div class="input-group">
                     
 
@@ -42,7 +22,9 @@
                     
                     <p>Forgot Password? <a href="#">Click Here</a></p>
 
-                    <p class="register-p"><a href="/users/sign-up">Register Now</a></p>
+                    <p class="register-p">
+                         <a href="/users/sign-up">Register Now</a>
+                    </p>
                 </div>
                 <div class="btn-field">
                     <button type="submit">Sign In</button>
@@ -60,6 +42,3 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    
-</body>
-</html>
