--- a/views/user-sign-up.ejs
+++ b/views/user-sign-up.ejs
@@ -27,7 +27,7 @@
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-lock"></i>
-                        <input type="password" name="confirm-password" placeholder="Confirm Password" required>   
+                        <input type="password" name="confirm_password" placeholder="Confirm Password" required>   
                     </div>
                     
                 </div>
