--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/static/navbar.css">
+<link rel="stylesheet" href="/static/style.css">
 
 <header class="header">
 
@@ -15,10 +15,45 @@
            <a href="#home">contact</a>
         </nav>
 
-        <div class="login-home">
-            <a href="/users/sign-in">
-                <i class="fa-solid fa-user"></i>
-                Log-In</a>
+        
+           
+            
+                <% if(locals.user){ %>
+                    <div class="user-icon">
+
+                        <form action="/users/profile" method="GET">
+                            <button class="profile-button">
+                                <i class="fa-solid fa-user"></i>
+                            <%= user.name %>
+                            </button>
+                        </form>
+                        
+                        
+                    </div>
+                    
+                    
+                    <div class="login-home">
+                        <a href="/users/sign-out">Sign Out</a>
+                    </div>
+                        
+                    
+                <% } else{ %>
+
+                    <div class="login-home">
+                  
+                    <a href="/users/sign-in">
+                        <i class="fa-solid fa-user"></i>
+                        Log-In</a>
+
+                    </div>
+
+        
+                <% } %>
+        
+            
+
+
+            
         </div>
 
         <div id="menu-btn" class="fas fa-bars">
