Animated videos added and chatroom to be initialised

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
                 <h4>Your Language Prof: <br>
                     "Learn a New Language Today!"</h4>
                 <a href="#contact" class="btn">Contact </a>
-                <a href="#contact" class="btn2">Explore</a>
+                <a href="/animated-stories" class="btn2">Explore</a>
             </div>
 
 
