Last stage commit

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -109,45 +109,46 @@
 
     <section class="courses" id="courses">
 
-        <h1 class="heading">Our <span>Courses</span></h1>
+        <h1 class="heading">Our <span>Services</span></h1>
 
             <div class="swiper course-slider">
 
                <div class="swiper-wrapper">
                    <div class="swiper-slide slide">
                       <img src="/static/images/coursesImage1.png" alt="">
-                      <h3>Web Development</h3>
-                      <p>Lorem Ipsum is simply dummy text of the printing and   
-                        since the 1500s,</p>
+                      <h3>LLearn - AI</h3>
+                      <p>This AI chatbot helps you remove your hesitation and finds wrong sentences</p>
+                      <a href="http://127.0.0.1:5500/AI-ChatBot-master/index.html" target="_blank" class="btn2"> Explore</a>
+                      
                    </div>
 
                    <div class="swiper-slide slide">
                     <img src="/static/images/coursesImage2.jpg" alt="">
-                    <h3>Digital Marketing</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and   
-                      since the 1500s,</p>
+                    <h3>Discussion Rooms</h3>
+                    <p>Hesitating? Learn with others - prime focus</p>
+                    <a href="http://localhost:3456/" target="_blank" class="btn2"> Explore</a>
                  </div>
 
                  <div class="swiper-slide slide">
                     <img src="/static/images/coursesImage4.jpg" alt="">
-                    <h3>And. Development</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and 
-                      since the 1500s,</p>
+                    <h3>Visual Learning</h3>
+                    <p>Learn through interesting animated stories to grab more</p>
+                    <a href="/animated-stories" target="_blank" class="btn2"> Explore</a>
                  </div>
 
 
                  <div class="swiper-slide slide">
                     <img src="/static/images/coursesImage4.jpg" alt="">
-                    <h3>And. Development</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and 
-                      since the 1500s,</p>
+                    <h3>LLearn - AI</h3>
+                      <p>This AI chatbot helps you remove your hesitation and finds wrong sentences</p>
+                      <a href="http://127.0.0.1:5500/AI-ChatBot-master/index.html" target="_blank" class="btn2"> Explore</a>
                  </div>
 
                  <div class="swiper-slide slide">
                     <img src="/static/images/coursesImage5.avif" alt="">
-                    <h3>And. Development</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and 
-                      since the 1500s,</p>
+                    <h3>LLearn - AI</h3>
+                      <p>This AI chatbot helps you remove your hesitation and finds wrong sentences</p>
+                      <a href="http://127.0.0.1:5500/AI-ChatBot-master/index.html" target="_blank" class="btn2"> Explore</a>
                  </div>
 
                 
