--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -12,7 +12,7 @@
            <a href="#course">courses</a>
            
            <a href="#home">reviews</a>
-           <a href="#home">contact</a>
+           <a href="http://localhost:3456/">contact</a>
         </nav>
 
         
