--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
 
             <div class="profile-body"><!-- profile body section -->
                 <div class="profile-actions">
-                    <button class="follow">Follow</button>
+                    <a href="http://localhost:8000/users/dashboard" class="follow">Dashboard</a>
                     <button class="message">Message</button>
                     <section class="bio">
                         <div class="bio-header">
